temporarily remove table-fixed code--causes issues with alignment

--- a/src/main/webapp/css/site.css
+++ b/src/main/webapp/css/site.css
@@ -1,34 +1,5 @@
 @charset "UTF-8";
 
-.table-fixed tbody {
-	height: 50%;
-	overflow-y: auto;
-	width: 100%;
-}
-
-.table-fixed thead,
-.table-fixed tbody,
-.table-fixed tfoot,
-.table-fixed tr,
-.table-fixed thead > td,
-.table-fixed tbody > td,
-.table-fixed th {
-    display: block;
-}
-
-.table-fixed tbody td,
-.table-fixed tbody th,
-.table-fixed thead > tr > th {
-    float: left;
-    position: relative;
-
-    &::after {
-        content: '';
-        clear: both;
-        display: block;
-    }
-}
-
 .signin-page-div {
 	align-items: center;
 	display: flex;
